--- a/vuejs/index.html
+++ b/vuejs/index.html
@@ -12,6 +12,6 @@
     <div id="app">
         {{ message }}
      </div>
-     <script src="app.js"></script>
+     <script src="vuejs/app.js"></script>
 </body>
 </html>
