--- a/frontend-react/index.html
+++ b/frontend-react/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <title>Project : Product recording web application</title>
   </head>
   <body>
     <div id="root"></div>
+    <!-- <script type="module">
+      import { nev } from "/src/main.jsx";
+      nev();
+    </script> -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
